2012-10-22  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/include/stdlib.h (strtof, strtoll, strtoull, strtold):Prototype
	if not __STRICT_ANSI__ or stdc version C99 or greater.

2012-10-21  Hans-Peter Nilsson  <hp@bitrange.com>

	* libc/sys/mmixware/sbrk.c (_sbrk): Drop unused extern declaration
	of "end".  Mark allocated memory by applying PRELD.

2012-10-16  Gregory Pietsch  <gpietsch@comcast.net>

	* libc/stdlib/getopt.c (getopt_internal): Align handling of colon to
	SUSv4 requirements.
	(__getopt_long_r): Fix formatting.

2012-10-16  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdio/vfprintf.c (__sbprintf): Fix comment.

2012-10-16  Aurelien Jacobs  <aurel@gnuage.org>

	* libc/include/assert.h (static_assert): Define.

2012-10-16  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/features.h (__GNUC_PREREQ): Define.  Use
	throughout in place of explicit GNUC version checks.
	* libc/include/_ansi.h (_NOINLINE): Define.
	(_NOINLINE_STATIC): Define.
	* libc/stdio/vfprintf.c (__sbprintf): Define _NOINLINE_STATIC.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordfree.c (wordfree): The wrong words are freed
	when WRDE_DOOFFS is in use. Restructure the code so that the memory
	needed to be freed is instead kept in an internal linked list...
	* libc/posix/wordexp2.h: ...as defined here...
	* libc/posix/wordexp.c (wordexp): ...and build this internal
	linked list here, avoiding wasteful strdup calls in the process.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Return WRDE_NOSPACE on resource
	allocation failure. Cleanup leftover resources when failing.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Handle expanded words longer
	than 500 bytes.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Don't leak file streams.

2012-10-03  DJ Delorie  <dj@redhat.com>

	* libc/machine/rl78/setjmp.S: Convert from CPP macros to GAS